后台图书增删改

--- a/goods/WebRoot/WEB-INF/web.xml
+++ b/goods/WebRoot/WEB-INF/web.xml
@@ -44,6 +44,11 @@
     <servlet-name>AdminBookServlet</servlet-name>
     <servlet-class>cn.itcast.goods.admin.book.web.servlet.AdminBookServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>AdminAddBookServlet</servlet-name>
+    <servlet-class>cn.itcast.goods.admin.book.web.servlet.AdminAddBookServlet</servlet-class>
+  </servlet>
+
 
 
 
@@ -82,5 +87,9 @@
   <servlet-mapping>
     <servlet-name>AdminBookServlet</servlet-name>
     <url-pattern>/admin/AdminBookServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AdminAddBookServlet</servlet-name>
+    <url-pattern>/admin/AdminAddBookServlet</url-pattern>
   </servlet-mapping>
 </web-app>
